    * pytivo-html.xsl:  Transforms the metadata into HTML for display.  Font's can look a bit rough, but more flexible.
    * the default is pytivo-text.xsl
  * metadata is also read from MP4 files into xml in the format <meta> <tag>xxx</tag>  <tag>xxx</tag>  </meta>
   * xsl.meta determines the XSL to use.  Default=meta-html.xsl.  meta-text.xsl is also available
    * Supports artwork, which is why meta-html is the default	
 * INI entry use.title= (default true) to use the title from the metadata instead of filename for listings
 * INI entry sort.filename= (default false).  If true, streambaby will sort entries in the selection screen by filename instead of metadata title
  * If set to false, tivo use metadata title for sort.
  * Sorting by metadata title causes a longer delay (could be very long if there are alot of movies in the directory) before rendering the selection screen if set to false
 * Switch to current jmdns from sourceforge
   * Required changes to build process, removal of simulator.jar from main dist, addition of hme-host-sb.jar
   * JmDNS shutdown hook is broken (always hangs).  Hack to remove the shutdown hook
 * Added HTML rendering code for Cobra (from lobo project), flyingsaucer xhtmlrenderer, and HTMLEditKit (built-in to java)
  * Can set the render by setting html.renderer= in the INI file
   * com.unwiredappeal.tivo.html.cobra.CobraRenderer for cobra (default)
   * com.unwiredappeal.tivo.html.htmlkit.HtmlKitRenderer 
 * New INI option, info.tidy (default: true) which runs jtidy on all HTML input before passing to renderer
 * New INI option, info.tidy.xhtml (default: true) which tells tidy to generate xhtml output.
 * New INI option html.css to set default css for html rendering.  relative to stylesheets directory (or abs)
  * default=streambaby.css, which doesn't exist by default (and so won't be loaded)
 * Added new location to look for streambaby.ini.   ${user.home}/.streambaby/streambaby.ini